<resources>
    <string name="app_name">爱骑艺</string>
    <string name="home_page">首页</string>
    <string name="category">分类</string>
    <string name="settings">设置</string>
    <string name="play_history">播放历史</string>
    <string name="safe_dns">安全DNS</string>
    <string name="disable">关闭</string>
    <string name="ali">阿里</string>
    <string name="qi_hoo">360</string>
    <string name="tencent">腾讯</string>
    <string name="ad_guard">ADGuard</string>
    <string name="google">谷歌</string>
    <string name="key_dns_url">dns_url</string>
    <string name="load_error_pull_down_retry">加载出问题了：%s，下拉重试</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="empty_and_click_retry">空空如也，点击重试</string>
    <string name="no_result_and_click_retry">没有结果，点击重试</string>
    <string name="error_and_click_retry">发生错误：%s\n点击重试</string>
    <string name="check_update_error">版本更新检查出错</string>
    <string name="empty">空空如也</string>
    <string name="keyword_not_empty">关键词不能为空</string>
    <string name="video_id_error">视频ID有误</string>
    <string name="resource_scanning_tips">资源扫描中(扫描完成自动播放)…</string>
    <string name="video_parse_success">视频解析成功</string>
    <string name="set_success_restart_takes_effect">设置成功，重启应用后生效</string>
    <string name="video_warning">请不要相信视频中的任何广告！</string>
    <string name="click_to_share">点击分享</string>
    <string name="share_failed">分享失败</string>
    <string name="share_to">分享到</string>
    <string name="no_apps_found_to_share">未找到可分享的应用</string>
    <string name="search">搜索</string>
    <string name="input_keyword_to_search">输入关键字开始搜索</string>
    <string name="already_seek_to_last_position">已经跳转到上次播放的位置</string>
    <string name="no_history">暂无历史记录</string>
    <string name="cancel">取消</string>
    <string name="seek_to">播放至：%s</string>
    <string name="portrait">竖屏</string>
    <string name="finished_reading">已看完</string>
    <string name="view_all">查看全部</string>
    <string name="check_all">全选</string>
    <string name="ok">确定</string>
    <string name="delete">删除</string>
    <string name="check_update">检查更新</string>
    <string name="current_version">当前版本</string>
    <string name="no_updated_version">没有更新的版本</string>
    <string name="guess_you_like_it">猜你喜欢</string>
    <string name="search_history">搜索记录</string>
    <string name="delete_all">全部删除</string>
    <string name="done">完成</string>
    <string name="speed_play">倍速播放</string>
    <string name="video_detail_error">影片详情获取失败</string>
    <string name="share_content_error">分享内容解析失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="socket_time_out">连接超时</string>
    <string name="no_network">网络未连接</string>
    <string name="server_unresponsive">网站无响应</string>
    <string name="no_catalog_info">没有分类信息</string>
</resources>
