<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="20dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/play_history"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CCCCCC"
            android:text="@string/view_all"
            android:textSize="12sp"
            android:layout_gravity="center_vertical|end"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_video_history"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"/>
    <com.test.qianbailu.ui.widget.SettingsItem
        android:id="@+id/dnsSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_gray"
        app:primaryTitle="@string/safe_dns" />
    <com.test.qianbailu.ui.widget.SettingsItem
        android:id="@+id/versionCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryTitle="@string/current_version"
        app:endIcon="@drawable/ic_arrow_forward"
        android:background="@drawable/ripple_gray"
        app:tips="@string/check_update"/>
</androidx.appcompat.widget.LinearLayoutCompat>