<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <com.test.qianbailu.ui.widget.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/play_history"
        app:rightTxt="@string/delete"
        android:background="@color/colorPrimary"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_video_history" />
    <FrameLayout
        android:id="@+id/deleteBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CCCCCC"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/check_all"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center_vertical|end"
            android:background="@android:color/transparent"/>
    </FrameLayout>
</LinearLayout>