<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:gravity="center_vertical"
    tools:viewBindingIgnore="true">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#ccc"
        android:text="@string/search_history"/>
    <ImageView
        android:id="@+id/ivDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tvDelAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginEnd="18dp"
        android:visibility="gone"
        android:text="@string/delete_all"/>
    <TextView
        android:id="@+id/tvDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:text="@string/done"/>
</androidx.appcompat.widget.LinearLayoutCompat>